--- a/templates/index.html
+++ b/templates/index.html
@@ -76,6 +76,8 @@
 
         <label for="end_hour">End Hour:</label>
         <input type="number" id="end_hour" name="endHour" min="0" max="23" value="{{ end_h }}" /><br />
+
+        <button type="submit" class="variables-btn">Upload</button>
       </div>
     </form>
     </nav>
