--- a/static/style.css
+++ b/static/style.css
@@ -34,13 +34,12 @@ nav {
 
 nav ul {
   list-style: none;
-  margin-top: 2rem;
   font-weight: lighter;
 }
 
 nav li {
-  margin-bottom: 15px;
-  transform: translate(0px, 600px);
+  margin-bottom: 20px;
+  transform: translate(0px, 650px);
 }
 
 nav a {
@@ -51,10 +50,9 @@ nav a {
 
 .title {
   position: absolute;
-  font-size: 5rem;
   left: 50%;
-  top: 75%;
-  transform: translate(-50%, -75%);
+  top: 50%;
+  transform: translate(-50%, -50%);
   background-color: white;
 }
 
@@ -74,21 +72,19 @@ nav a {
 }
 
 .lil-gui .title {
-  top: -80px;
+  top: -50px;
   padding: 0px;
-  font-size: 50px;
+  font-size: 3rem;
 }
 
 .lil-gui.root > .title {
-  color: pink;
+  color: white;
 }
 .lil-gui.closed > .title:before {
   content: "";
-  padding: 20px;
 }
 .lil-gui .title:before {
   content: "";
-  padding: 20px;
 }
 
 .upload-form {
@@ -128,22 +124,95 @@ nav a {
   max-width: 400px;
 }
 
-.upload-btn {
-  font-size: 1rem;
-  padding: 5px;
-  border-radius: 2px;
-  border-color: white;
-  background-color: black;
-  color: white;
-  font-weight: bold;
+.upload-btn  {
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
   cursor: pointer;
-  transition: background-color 0.3s ease;
-  margin-top: 10px;
-  transform: translate(0px, 400px);
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+  transform: translate(5px, 500px);
+
 }
 
-.upload-btn:hover {
-  background-color: peachpuff;
+.upload-btn :focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.upload-btn :hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.upload-btn :active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
+}
+
+.variables-btn{
+  align-items: center;
+  appearance: none;
+  background-color: #FCFCFD;
+  border-radius: 4px;
+  border-width: 0;
+  box-shadow: rgba(45, 35, 66, 0.4) 0 2px 4px,rgba(45, 35, 66, 0.3) 0 7px 13px -3px,#D6D6E7 0 -3px 0 inset;
+  box-sizing: border-box;
+  color: #36395A;
+  cursor: pointer;
+  display: inline-flex;
+  height: 48px;
+  justify-content: center;
+  line-height: 1;
+  list-style: none;
+  overflow: hidden;
+  padding-left: 16px;
+  padding-right: 16px;
+  position: relative;
+  text-align: left;
+  text-decoration: none;
+  transition: box-shadow .15s,transform .15s;
+  user-select: none;
+  -webkit-user-select: none;
+  touch-action: manipulation;
+  white-space: nowrap;
+  will-change: box-shadow,transform;
+  font-size: 18px;
+  transform: translate(0px, 25px);
+}
+
+.variables-btn :focus {
+  box-shadow: #D6D6E7 0 0 0 1.5px inset, rgba(45, 35, 66, 0.4) 0 2px 4px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+}
+
+.variables-btn :hover {
+  box-shadow: rgba(45, 35, 66, 0.4) 0 4px 8px, rgba(45, 35, 66, 0.3) 0 7px 13px -3px, #D6D6E7 0 -3px 0 inset;
+  transform: translateY(-2px);
+}
+
+.variables-btn :active {
+  box-shadow: #D6D6E7 0 3px 7px inset;
+  transform: translateY(2px);
 }
 
 .sidebar {
@@ -157,6 +226,32 @@ nav a {
   display: flex;
   flex-direction: column;
   color: white;
-  transform: translate(0px, -325px);
+  transform: translate(0px, -275px);
   width: 150px;
+}
+
+.lil-gui.allow-touch-styles.root.autoPlace{
+  transform: translate(0px, -150px);
+}
+
+.result-panel {
+  position: fixed;
+  bottom: 10px;
+  right: 10px;
+  width: 300px;
+  height: 200px;
+  padding: 20px;
+  background-color: black;
+  border: 1px solid white;
+  color: white;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.1);
+  display: flex;
+  justify-content: center;
+  border-radius: 5px;
+  flex-direction: column;
+}
+
+.green-text{
+  text-align: center;
+  color: green;
 }
