--- a/templates/index.html
+++ b/templates/index.html
@@ -12,6 +12,7 @@
       href="https://fonts.googleapis.com/css2?family=Roboto+Mono:wght@500&display=swap"
       rel="stylesheet"
     />
+    <script src="https://kit.fontawesome.com/4ef153df69.js" crossorigin="anonymous"></script>
   </head>
   <script
     async
@@ -57,7 +58,7 @@
       </div>
     </form>
 
-    <form action="{{ url_for('update_variables') }}" method="POST" class="variables-form">
+    <form id="variables-form" action="{{ url_for('update_variables') }}" method="POST" class="variables-form">
       <div class="slider-wrapper">
         <label for="start_month">Start Month:</label>
         <input type="number" id="start_month" name="startMonth" min="1" max="12" value="{{ start_m }}" /><br />
@@ -77,13 +78,16 @@
         <label for="end_hour">End Hour:</label>
         <input type="number" id="end_hour" name="endHour" min="0" max="23" value="{{ end_h }}" /><br />
 
-        <button type="submit" class="variables-btn">Upload</button>
+        <button type="submit" class="variables-btn" onclick="submitForm()">SEND INPUTS</button>
       </div>
     </form>
     </nav>
+    <div class="result-panel">
+      <h2 class="result-text">Average sunlight hours: <span class="green-text">{{ total_sunlight_hours }}</span></h2>
+      <h2 class="result-text">Average incident radiation: <span class="green-text"> {{ total_radiation_hours }}</span> kWh/m2</h2>
+    </div>
     <div id="result"></div>
     <script
-
     type="module"
     src="{{ url_for('static', filename='js/main.js') }}"
     ></script>
